<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TemperatureConverter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="thermometer_image">Image of thermometer</string>
    <string name="convert_prompt">Convert </string>
    <string name="results_prompt">Results</string>
    <string name="enter_degrees_prompt">Enter degrees</string>
    <string name="F_prompt">F</string>
    <string name="C_prompt">C</string>
    <string name="you_entered_prompt">You entered</string>
    <string name="degrees_prompt"> \u0020degrees \u0020 </string>
    <string name="converted_temperature_result_prompt">The converted temperature is</string>
    <string name="reset_button_prompt">Reset</string>
    <string name="return_button_prompt">Return to Main</string>
    <string name="title_activity_convert">ConvertActivity</string>
    <string name="input_temp">inputTemp</string>
    <string name="input_choice">inputChoice</string>
    <string name="conv_temp">convTemp</string>
    <string name="conv_choice">convChoice</string>

</resources>
