<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/thermometerImageView"
        android:src="@drawable/thermometer"
        android:contentDescription="@string/thermometer_image"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert_prompt"
        android:id="@+id/convertButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/button_style"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_prompt"
        android:id="@+id/convertTextView"
        android:layout_alignTop="@+id/thermometerImageView"
        android:layout_centerHorizontal="true"
        android:textSize="32sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/inputEditText"
        android:layout_below="@+id/convertTextView"
        android:layout_alignLeft="@+id/convertTextView"
        android:layout_alignStart="@+id/convertTextView"
        android:hint="@string/enter_degrees_prompt"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/inputEditText"
        android:layout_alignLeft="@+id/inputEditText"
        android:layout_alignStart="@+id/inputEditText"
        android:layout_above="@+id/convertButton">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/F_prompt"
            android:id="@+id/fRadioButton"
            android:onClick="onRadioButtonClicked"
            android:checked="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/C_prompt"
            android:id="@+id/cRadioButton"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_button_prompt"
        android:id="@+id/resetButton"
        android:layout_above="@+id/convertButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/reset_button_style"/>
</RelativeLayout>
