<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.android.temperatureconverter.UI.ConvertActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/thermometerImageView"
        android:src="@drawable/thermometer"
        android:contentDescription="@string/thermometer_image"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/return_button_prompt"
        android:id="@+id/returnToMainButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/button_style"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_prompt"
        android:id="@+id/resultsTextView"
        android:textSize="32sp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/thermometerImageView"
        android:layout_toEndOf="@+id/thermometerImageView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_entered_prompt"
        android:id="@+id/youEnteredTextView"
        android:layout_below="@+id/resultsTextView"
        android:layout_toRightOf="@+id/thermometerImageView"
        android:layout_toEndOf="@+id/thermometerImageView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inputTempTextView"
        android:layout_below="@+id/youEnteredTextView"
        android:layout_toRightOf="@+id/thermometerImageView"
        android:layout_toEndOf="@+id/thermometerImageView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degrees_prompt"
        android:id="@+id/degreesTextView1"
        android:layout_below="@+id/youEnteredTextView"
        android:layout_toRightOf="@+id/inputTempTextView"
        android:layout_toEndOf="@+id/inputTempTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inputChoiceTextView"
        android:layout_below="@+id/youEnteredTextView"
        android:layout_toRightOf="@+id/degreesTextView1"
        android:layout_toEndOf="@+id/degreesTextView1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/converted_temperature_result_prompt"
        android:id="@+id/convTempPromptTextView"
        android:layout_below="@+id/inputTempTextView"
        android:layout_toRightOf="@+id/thermometerImageView"
        android:layout_toEndOf="@+id/thermometerImageView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/convTempTextView"
        android:layout_below="@+id/convTempPromptTextView"
        android:layout_toRightOf="@+id/thermometerImageView"
        android:layout_toEndOf="@+id/thermometerImageView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degrees_prompt"
        android:id="@+id/degreesTextView2"
        android:layout_below="@+id/convTempPromptTextView"
        android:layout_toRightOf="@+id/convTempTextView"
        android:layout_toEndOf="@+id/convTempTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/convChoiceTextView"
        android:layout_below="@+id/convTempPromptTextView"
        android:layout_toRightOf="@+id/degreesTextView2"
        android:layout_toEndOf="@+id/degreesTextView2"/>

</RelativeLayout>
